# visione

./: .env  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  router.conf
analysis/clip/: extract.py  requirements.txt
analysis/colors/: extract.py  requirements.txt  visualize_color_map.py
analysis/dinov2/: Dockerfile  extract.py
analysis/frame-cluster/: cluster.py
analysis/gem/: Dockerfile  extract.py
analysis/objects-mmdet/: extract.py
analysis/objects-openimagesv4/: Dockerfile  extract.py  requirements.txt
analysis/other-objects-and-colors/: template_MongoDBConfig.yaml
cli/: __main__.py
cli/commands/: __init__.py  base_command.py  command.py  import_.py  import_command.py  index.py  init_command.py  serve.py
common/: savers.py
core/: .dockerignore  .project  Dockerfile  README.md  setenv.sh
core/conf/: classname_hyperset_definition.csv  classname_hyperset_definition_query.csv  conf.properties
core/root/: canvas1.html  filters.html  filters2.html  index.html  index_no_include.html  indexedData.html  objects_doc_freq.csv  palette.html  test.html  (+14 more)
frame-cluster/: Dockerfile  cluster.py  requirements.txt
mongo-scripts/: common.js  createViews.js  defaulfConfig.json  init.js
router/: default.conf.template  ssl.conf.template
skel/: config.env
tests/: quick.sh
visioneCore/: .classpath  .project  Dockerfile
visioneUI/: filters.html  index.html  indexAVS.html  indexMVK.html  indexMVKAVS.html  index_V3C.html  indexedData.html  palette.html  showVideoKeyframes.html  videoPlayer.html  videos.jsp
web-ui/: .project  index.html
(+322 files in other folders)
